--- a/Judul-1/style.css
+++ b/Judul-1/style.css
@@ -54,7 +54,8 @@ header .container {
     justify-content: space-between; 
     align-items: center;
     margin: 10px auto;
-    padding: 0 20px; 
+    padding-left: 5px;
+    padding-right: 20px; 
 }
 
 header h1 {
